pulldown-cmark-mdcat/src/snapshots/pulldown_cmark_mdcat__tests__layout__begins_with_rule.snap
---
source: pulldown-cmark-mdcat/src/lib.rs
assertion_line: 207
expression: "render_string_dumb(\"----\").unwrap()"
---
════════════════════════════════════════════════════════════════════════════════
