pulldown-cmark-mdcat/src/snapshots/pulldown_cmark_mdcat__tests__layout__flush_ref_links_at_end.snap
---
source: pulldown-cmark-mdcat/src/lib.rs
assertion_line: 270
expression: "render_string_dumb(\"Hello [World](http://example.com/world)\n\n# Headline\n\nHello [Donald](http://example.com/Donald)\").unwrap()"
---
Hello World[1]

[1]: http://example.com/world

┄Headline

Hello Donald[2]

[2]: http://example.com/Donald
