pulldown-cmark-mdcat/src/snapshots/pulldown_cmark_mdcat__tests__layout__heading_in_block_quote.snap
---
source: pulldown-cmark-mdcat/src/lib.rs
assertion_line: 227
expression: "render_string_dumb(\"> Hello World\n\n> # Hello World\").unwrap()"
---
    Hello World

    ┄Hello World
